Move client key

--- a/example.html
+++ b/example.html
@@ -1,6 +1,6 @@
 <!html>
     <head>
-        <meta property="ld:clientid" content="foo">
+        <meta property="ld:clientid" content="604009d2b8b2810eddcc36db">
         <meta property="ld:config:sendEvents" content="true" data-json>
         <meta property="ld:user:name" content="hi" data-private>
         <meta property="ld:user:groups" content="group1" >
@@ -53,7 +53,7 @@
             <span class="space-off">off</span>
         </p>
 
-        <script src="launchdarkly-html-sdk.js" data-ld-clientkey="604009d2b8b2810eddcc36db"></script>
+        <script src="launchdarkly-html-sdk.js"></script>
 
     </body>
 </html>
